--- a/Reciplease/Reciplease/View/Base.lproj/Main.storyboard
+++ b/Reciplease/Reciplease/View/Base.lproj/Main.storyboard
@@ -392,7 +392,10 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="160"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default pic" translatesAutoresizingMaskIntoConstraints="NO" id="pD3-uB-d6H">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default pic" translatesAutoresizingMaskIntoConstraints="NO" id="pD3-uB-d6H">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="160"/>
+                                                </imageView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gradient" translatesAutoresizingMaskIntoConstraints="NO" id="PHI-r8-7Zl" userLabel="Gradient View">
                                                     <rect key="frame" x="0.0" y="0.0" width="414" height="160"/>
                                                 </imageView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="f0r-bN-vls" userLabel="Labels Stack View">
@@ -439,11 +442,15 @@
                                                 <constraint firstAttribute="trailing" secondItem="pD3-uB-d6H" secondAttribute="trailing" id="EJ9-6o-dYP"/>
                                                 <constraint firstAttribute="trailing" secondItem="nMs-94-UER" secondAttribute="trailing" constant="10" id="M5J-aT-3Bv"/>
                                                 <constraint firstItem="nMs-94-UER" firstAttribute="top" secondItem="WZm-oK-GbA" secondAttribute="top" constant="10" id="MVu-rf-oEH"/>
+                                                <constraint firstItem="PHI-r8-7Zl" firstAttribute="bottom" secondItem="pD3-uB-d6H" secondAttribute="bottom" id="MZM-IB-5lr"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="f0r-bN-vls" secondAttribute="trailing" id="Obb-Kt-toj"/>
                                                 <constraint firstItem="f0r-bN-vls" firstAttribute="bottom" secondItem="WZm-oK-GbA" secondAttribute="bottomMargin" id="QLM-fh-g2Q"/>
                                                 <constraint firstItem="f0r-bN-vls" firstAttribute="leading" secondItem="WZm-oK-GbA" secondAttribute="leadingMargin" id="Qpn-hE-BQk"/>
+                                                <constraint firstItem="PHI-r8-7Zl" firstAttribute="trailing" secondItem="pD3-uB-d6H" secondAttribute="trailing" id="bmg-sk-OiT"/>
                                                 <constraint firstItem="pD3-uB-d6H" firstAttribute="top" secondItem="WZm-oK-GbA" secondAttribute="top" id="cPd-GN-bbF"/>
                                                 <constraint firstItem="pD3-uB-d6H" firstAttribute="leading" secondItem="WZm-oK-GbA" secondAttribute="leading" id="csa-OX-5jm"/>
+                                                <constraint firstItem="PHI-r8-7Zl" firstAttribute="top" secondItem="pD3-uB-d6H" secondAttribute="top" id="dlF-iW-c14"/>
+                                                <constraint firstItem="PHI-r8-7Zl" firstAttribute="leading" secondItem="pD3-uB-d6H" secondAttribute="leading" id="hwf-rs-8ei"/>
                                                 <constraint firstAttribute="bottom" secondItem="pD3-uB-d6H" secondAttribute="bottom" id="qYK-WV-yfr"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -491,7 +498,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default pic" translatesAutoresizingMaskIntoConstraints="NO" id="0pC-5D-W10" userLabel="Picture">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default pic" translatesAutoresizingMaskIntoConstraints="NO" id="0pC-5D-W10" userLabel="Picture">
                                 <rect key="frame" x="0.0" y="44" width="414" height="269"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="-5" translatesAutoresizingMaskIntoConstraints="NO" id="W0V-51-Toa" userLabel="Picture Stack View">
@@ -610,6 +617,7 @@
     </scenes>
     <resources>
         <image name="default pic" width="308" height="308"/>
+        <image name="gradient" width="66.5" height="66.5"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="star" catalog="system" width="128" height="116"/>
         <image name="star.fill" catalog="system" width="128" height="116"/>
