--- a/Reciplease/Reciplease/View/Base.lproj/Main.storyboard
+++ b/Reciplease/Reciplease/View/Base.lproj/Main.storyboard
@@ -259,7 +259,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default pic" translatesAutoresizingMaskIntoConstraints="NO" id="dWm-cD-8IQ" userLabel="Picture">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default pic" translatesAutoresizingMaskIntoConstraints="NO" id="dWm-cD-8IQ" userLabel="Picture">
+                                <rect key="frame" x="0.0" y="88" width="414" height="269"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gradient" translatesAutoresizingMaskIntoConstraints="NO" id="K2V-Hz-Rsy" userLabel="Gradient">
                                 <rect key="frame" x="0.0" y="88" width="414" height="269"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="-5" translatesAutoresizingMaskIntoConstraints="NO" id="Dh8-Vv-sCj" userLabel="Likes and Time Stack View">
@@ -328,8 +331,11 @@
                             <constraint firstItem="Bai-mP-OQl" firstAttribute="trailing" secondItem="gNN-7f-rav" secondAttribute="trailing" constant="20" id="4vk-Kc-87G"/>
                             <constraint firstItem="dWm-cD-8IQ" firstAttribute="top" secondItem="Bai-mP-OQl" secondAttribute="top" id="9ly-DE-jQM"/>
                             <constraint firstItem="M4a-Hg-2cC" firstAttribute="top" secondItem="dWm-cD-8IQ" secondAttribute="bottom" constant="10" id="GE5-EP-4Oz"/>
+                            <constraint firstItem="K2V-Hz-Rsy" firstAttribute="leading" secondItem="dWm-cD-8IQ" secondAttribute="leading" id="QRc-Yd-l62"/>
+                            <constraint firstItem="K2V-Hz-Rsy" firstAttribute="top" secondItem="dWm-cD-8IQ" secondAttribute="top" id="QfL-4B-sen"/>
                             <constraint firstItem="gNN-7f-rav" firstAttribute="leading" secondItem="Bai-mP-OQl" secondAttribute="leading" constant="20" id="T6b-lh-S3U"/>
                             <constraint firstItem="Bai-mP-OQl" firstAttribute="trailing" secondItem="M4a-Hg-2cC" secondAttribute="trailing" constant="20" id="cRV-KE-Nrv"/>
+                            <constraint firstItem="K2V-Hz-Rsy" firstAttribute="trailing" secondItem="dWm-cD-8IQ" secondAttribute="trailing" id="cgR-2X-o1e"/>
                             <constraint firstItem="crq-pf-sFB" firstAttribute="trailing" secondItem="dWm-cD-8IQ" secondAttribute="trailing" id="eEK-RY-OHa"/>
                             <constraint firstItem="M4a-Hg-2cC" firstAttribute="width" secondItem="M4a-Hg-2cC" secondAttribute="height" multiplier="1:1" id="ehT-Bg-nfD"/>
                             <constraint firstItem="Dh8-Vv-sCj" firstAttribute="top" secondItem="Bai-mP-OQl" secondAttribute="top" constant="10" id="fkE-fy-iat"/>
@@ -337,6 +343,7 @@
                             <constraint firstItem="dWm-cD-8IQ" firstAttribute="height" secondItem="n2B-7v-Ybr" secondAttribute="height" multiplier="0.3" id="gph-MS-4Pt"/>
                             <constraint firstItem="crq-pf-sFB" firstAttribute="leading" secondItem="dWm-cD-8IQ" secondAttribute="leading" id="ie9-ib-IOO"/>
                             <constraint firstItem="crq-pf-sFB" firstAttribute="bottom" secondItem="dWm-cD-8IQ" secondAttribute="bottom" id="kxj-Tv-fvG"/>
+                            <constraint firstItem="K2V-Hz-Rsy" firstAttribute="bottom" secondItem="dWm-cD-8IQ" secondAttribute="bottom" id="oa0-C0-frv"/>
                             <constraint firstItem="dWm-cD-8IQ" firstAttribute="trailing" secondItem="Bai-mP-OQl" secondAttribute="trailing" id="qNJ-al-cNq"/>
                             <constraint firstItem="M4a-Hg-2cC" firstAttribute="leading" secondItem="Bai-mP-OQl" secondAttribute="leading" constant="20" id="qPY-j5-Iq7"/>
                             <constraint firstItem="dWm-cD-8IQ" firstAttribute="leading" secondItem="Bai-mP-OQl" secondAttribute="leading" id="tgu-kL-RIa"/>
@@ -501,6 +508,9 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default pic" translatesAutoresizingMaskIntoConstraints="NO" id="0pC-5D-W10" userLabel="Picture">
                                 <rect key="frame" x="0.0" y="44" width="414" height="269"/>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gradient" translatesAutoresizingMaskIntoConstraints="NO" id="8Ub-RM-ho2" userLabel="Gradient">
+                                <rect key="frame" x="0.0" y="44" width="414" height="269"/>
+                            </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="-5" translatesAutoresizingMaskIntoConstraints="NO" id="W0V-51-Toa" userLabel="Picture Stack View">
                                 <rect key="frame" x="325.5" y="54" width="78.5" height="78.5"/>
                                 <subviews>
@@ -578,10 +588,14 @@
                             <constraint firstItem="67X-j8-5PI" firstAttribute="trailing" secondItem="0pC-5D-W10" secondAttribute="trailing" id="Ip2-2R-SxG"/>
                             <constraint firstItem="67X-j8-5PI" firstAttribute="bottom" secondItem="0pC-5D-W10" secondAttribute="bottom" id="Nxn-La-cLI"/>
                             <constraint firstItem="a1u-Df-yDC" firstAttribute="leading" secondItem="lCK-jp-8cN" secondAttribute="leading" constant="20" id="Q2T-iR-xYg"/>
+                            <constraint firstItem="8Ub-RM-ho2" firstAttribute="bottom" secondItem="0pC-5D-W10" secondAttribute="bottom" id="Rmm-Jp-Gga"/>
                             <constraint firstItem="a1u-Df-yDC" firstAttribute="top" secondItem="0pC-5D-W10" secondAttribute="bottom" constant="10" id="UCT-fc-jNK"/>
                             <constraint firstItem="L4B-0j-Ijl" firstAttribute="leading" secondItem="lCK-jp-8cN" secondAttribute="leading" constant="20" id="Xmy-yR-MOT"/>
+                            <constraint firstItem="8Ub-RM-ho2" firstAttribute="trailing" secondItem="0pC-5D-W10" secondAttribute="trailing" id="cUM-6r-8Ho"/>
                             <constraint firstItem="lCK-jp-8cN" firstAttribute="trailing" secondItem="a1u-Df-yDC" secondAttribute="trailing" constant="20" id="e5j-Sv-XJE"/>
+                            <constraint firstItem="8Ub-RM-ho2" firstAttribute="top" secondItem="0pC-5D-W10" secondAttribute="top" id="qBc-wQ-LZj"/>
                             <constraint firstItem="0pC-5D-W10" firstAttribute="top" secondItem="lCK-jp-8cN" secondAttribute="top" id="sHY-u2-jRg"/>
+                            <constraint firstItem="8Ub-RM-ho2" firstAttribute="leading" secondItem="0pC-5D-W10" secondAttribute="leading" id="zCj-fa-YfJ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Reciplease" id="QOj-D6-C8J">
