--- a/Reciplease/Reciplease/Supporting files/Base.lproj/LaunchScreen.storyboard
+++ b/Reciplease/Reciplease/Supporting files/Base.lproj/LaunchScreen.storyboard
@@ -15,7 +15,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="1qT-au-8qc">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gradientBackground" translatesAutoresizingMaskIntoConstraints="NO" id="1qT-au-8qc">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Reciplease" translatesAutoresizingMaskIntoConstraints="NO" id="0gA-sP-xDd">
@@ -54,6 +54,6 @@
     </scenes>
     <resources>
         <image name="Reciplease" width="360" height="360"/>
-        <image name="background" width="100" height="200"/>
+        <image name="gradientBackground" width="133.5" height="133.5"/>
     </resources>
 </document>
