--- a/Reciplease/Reciplease/View/Base.lproj/Main.storyboard
+++ b/Reciplease/Reciplease/View/Base.lproj/Main.storyboard
@@ -317,7 +317,9 @@
                             <constraint firstItem="HwM-Ta-z7b" firstAttribute="top" secondItem="1dZ-pt-0ut" secondAttribute="top" id="vc9-yq-7I1"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Reciplease" id="Yfv-5t-IZG"/>
+                    <navigationItem key="navigationItem" title="Reciplease" id="Yfv-5t-IZG">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="XkT-4N-K0a"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="HwM-Ta-z7b" id="ufr-MC-VaL"/>
                     </connections>
@@ -573,7 +575,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5JA-0g-pBv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2794" y="423"/>
+            <point key="canvasLocation" x="2258" y="274"/>
         </scene>
     </scenes>
     <resources>
